force-app/main/default/objects/User_Story__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>User Story Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>