force-app/main/default/objects/User_Story__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <formula>&quot;So that &quot;+ So_that__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason</label>
    <type>Text</type>
</CustomField>