force-app/main/default/objects/User_Story__c/fields/ReasonOnHold__c.field-meta.xml
<CustomField>
    <fullName>ReasonOnHold__c</fullName>
    <label>ReasonOnHold</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>