force-app/main/default/objects/User_Story__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <formula>&quot;I need &quot;+ I_need__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement</label>
    <type>Text</type>
</CustomField>