force-app/main/default/objects/User_Story__c/fields/Solution_Components__c.field-meta.xml
<CustomField>
    <fullName>Solution_Components__c</fullName>
    <label>Solution Components</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>