force-app/main/default/objects/User_Story__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the Sprint # here</inlineHelpText>
    <label>Sprint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>