force-app/main/default/objects/User_Story__c/fields/Testing_steps__c.field-meta.xml
<CustomField>
    <fullName>Testing_steps__c</fullName>
    <label>Testing steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>