force-app/main/default/objects/User_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sprint__c</columns>
    <columns>Stage__c</columns>
    <columns>Epic__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>User_Story__c.User_Story</value>
    </filters>
    <label>All User Stories</label>
</ListView>