force-app/main/default/objects/User_Story__c/listViews/Kanban.listView-meta.xml
<ListView>
    <fullName>Kanban</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Requirement__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>